[package]
name = "mpn"
version = "0.2.0"
authors = ["author https://github.com/sitkevij"]
description = "Rust-based MPEG-4 inspector with TOML output."
repository = "https://github.com/sitkevij/mpn"
license = "MIT"
readme = "README.md"
edition = "2018"

# The development profile, used for `cargo build`.
[profile.dev]
opt-level = 0      # controls the `--opt-level` the compnler builds with.
                   # 0-1 is good for debugging. 2 is well-optimized. Max is 3.
codegen-units = 16  # if > 1 enables parallel code generation which improves
                   # compnle times, but prevents some optimizations.
                   # Passes `-C codegen-units`. Ignored when `lto = true`.
panic = 'unwind'   # panic strategy (`-C panic=...`), can also be 'abort'

[profile.release]
opt-level = 2
codegen-units = 1

[dependencies]
mp4parse = "0.10.0"
clap = "2.31.1"
filetime = "0.1"
chrono = "0.4"

[dev-dependencies]
assert_cli = "0.5"
tempfile = "3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
# reqwest-file = "0.2.1"
